--- a/index.html
+++ b/index.html
@@ -103,22 +103,24 @@
                   <label for="zip">Zip Code</label><br>
                 <input type="text" id="zip" name="user_zipcode" placeholder="zip"><br>
               </div>
-            </div>
+
           </fieldset>
 
             <fieldset>
               <legend>Newsletter</legend>
                 <p>Select the newsletters you would like to receive</p>
-                <input type="checkbox" id="html" name="updates"><label for="html">HTML News</label><br>
-                <input type="checkbox" id="css" name="updates"><label for="css">CSS News</label><br>
-                <input type="checkbox" id="js" name="updates"><label for="js">Javascript News</label><br>
-                <p>Newsletter format</p>
-                <input type="radio" id="html-news" name="format"><label for="html-news">HTML</label><br>
-                <input type="radio" id="plain" name="format"><label for="plain">Plain</label><br>
-                <div class="comments">
+                <div class="xtra-info clearfix">
+                  <input type="checkbox" id="html" name="updates"><label for="html">HTML News</label><br>
+                  <input type="checkbox" id="css" name="updates"><label for="css">CSS News</label><br>
+                  <input type="checkbox" id="js" name="updates"><label for="js">Javascript News</label><br>
+                  <p>Newsletter format</p>
+                  <input type="radio" id="html-news" name="format"><label for="html-news">HTML</label><br>
+                  <input type="radio" id="plain" name="format"><label for="plain">Plain</label><br>
+                  <div class="comments">
                   <label for="other">Other topics you'd like to hear about</label><br>
-                  <textarea id="other" name="other">
-                  </textarea><br>
+                    <center><textarea id="other" name="other">
+                  </textarea><center><br>
+                  </div>
                 </div>
               <input type="submit" value="Sign Up!">
             </fieldset>
@@ -130,5 +132,5 @@
           <h3>The Code Review</h3>
         </div>
       </footer>
-    </div>
+
   </body>
