make edits suggested
second submission

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
           </fieldset>
 
-            <fieldset>
+            <fieldset class="news">
               <legend>Newsletter</legend>
                 <p>Select the newsletters you would like to receive</p>
                 <div class="xtra-info clearfix">
@@ -118,8 +118,8 @@
                   <input type="radio" id="plain" name="format"><label for="plain">Plain</label><br>
                   <div class="comments">
                   <label for="other">Other topics you'd like to hear about</label><br>
-                    <center><textarea id="other" name="other">
-                  </textarea><center><br>
+                  <textarea id="other" name="other">
+                  </textarea><br>
                   </div>
                 </div>
               <input type="submit" value="Sign Up!">
